[package]
name = "axfs_devfs"
version = "0.1.1"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Device filesystem used by ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/axfs_crates"
documentation = "https://docs.rs/axfs_devfs"
keywords = ["arceos", "filesystem", "devfs"]
categories = ["os", "no-std", "filesystem"]

[dependencies]
axfs_vfs = { path = "../axfs_vfs", version = "0.1" }
axhal = { workspace = true }
spin = "0.9"
log = "0.4"
