[package]
name = "axfs_vfs"
version = "0.1.1"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Virtual filesystem interfaces used by ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/axfs_crates"
documentation = "https://docs.rs/axfs_vfs"
keywords = ["arceos", "filesystem", "vfs"]
categories = ["os", "no-std", "filesystem"]

[features]
default = []

[dependencies]
log = "0.4"
bitflags = "2.6"
axerrno = "0.1"
